@@ -1,3 +1,10 @@
+2020-02-25  Patrick Palka  <ppalka@redhat.com>
+
+	LWG 3292 iota_view is under-constrained
+	* include/std/ranges (iota_view): Require that _Winc models semiregular
+	  as per LWG 3292.
+	* testsuite/std/ranges/iota/lwg3292_neg.cc: New test.
+
 2020-02-25  Jonathan Wakely  <jwakely@redhat.com>
 
 	* include/bits/ranges_algobase.h (__copy_or_move): Do not use memmove
